--- a/_teaching/2018_file.md
+++ b/_teaching/2018_file.md
@@ -1,1 +1,10 @@
+---
+title: "Asia-Europe-Pacific School of High Energy Physics"
+collection: teaching
+type: "School"
+permalink: /teaching/2018_file
+venue: "Quy Nhon"
+date: 2018-9-25
+location: "Vietnam"
+---
 
