--- a/_talks/2021_file.md
+++ b/_talks/2021_file.md
@@ -7,6 +7,8 @@ venue: "International MasterClass, organised by University of Jammu"
 date: 2021-02-11
 location: "ONLINE"
 ---
-[More information here](http://example2.com)
+[More information here](https://sites.google.com/view/imc-at-jam/venue)
 
-This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
+The United Nations General Assembly adopted a resolution in December 2015 and declared February 11th as the International Day of Women and Girls in Science. This date should be recognised as a global celebration on equal participation and the accomplishments of female scientists.
+
+International Masterclasses are launching Masterclass activities on the International Day of Women and Girls in Science. Institutes are encouraged to arrange a special Masterclass event for girls only. With this event we plan to support and promote the access of women and girls to science education and research activities.
