--- a/_teaching/2019_file.md
+++ b/_teaching/2019_file.md
@@ -7,4 +7,4 @@ venue: "CERN, Geneva"
 date: 2019-08-28
 location: "Switzerland"
 ---
-[More information here](https://indico.cern.ch/event/795313/)
+[Link is here](https://indico.cern.ch/event/795313/)
